# wonderstats

./: pyproject.toml
src/wonderstats/: __init__.py  parser.py
src/wonderstats/bga/: __init__.py  parser.py
tests/: test_parser.py
tests/resources/: bga_abandoned_game_v0.1.2.json  bga_old_data.json  bga_v0.1.0.json  bga_v0.1.5.json  bga_v0.1.6_conceded.json  expected_values.py  ts_v0.1.0.json
